welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:2: error: illegal start of simple pattern
  for (int i=0; i < (nums.length-2) {
            ^noTriples:2: error: '<-' expected but ';' found.
  for (int i=0; i < (nums.length-2) {
              ^noTriples:2: error: '<-' expected but '{' found.
  for (int i=0; i < (nums.length-2) {
                                    ^noTriples:9: error: illegal start of simple expression
  return true;
             ^noTriples:10: error: illegal start of simple pattern
} 
^