welcome.lessons.welcome.array.notriples.NoTriples.scala.code
def noTriples(nums:Array[Int]): Boolean = {
  for (int i=0; i < (nums.length-2) {
    int first = nums[i];
    if (nums[i+1]==first && nums[i+2]==first) return false;
    i = i+1 
  }
  
  // If we get here ... no triples.
  return true;
}